tests/ui/stability-attribute/accidental-stable-in-unstable.stderr
error[E0658]: use of unstable library feature `unicode_internals`
  --> $DIR/accidental-stable-in-unstable.rs:6:5
   |
LL | use core::unicode::UNICODE_VERSION;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unicode_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
